kubernetes/apps/mcp/toolhive-servers/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == any(200,401,404,406)"]
spec:
  hostnames:
    - "mcp.f9.casa"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 8080
